# EGL3

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  acls.c  attrib.c  attrib.h  attrlist.h  bootsect.c  cache.c  cache.h  debug.h  device.c  device_io.h  dir.c  egl3files.h  egl3interface.c  egl3interface.h  index.c  launch.vs.json  layout.h  lcnalloc.c  logfile.h  logging.c  logging.h  mft.c  misc.c  mkntfs.c  ntdll.exports  ntfstime.h  object_id.c  reparse.c  security.c  security.h  types.h  utils.c  win32_io.c
src/: CMakeLists.txt  EGL3.css  EGL3.glade  EGL3.glade~  main.cpp  main.manifest  main.rc  srv_main.cpp
src/disk/: interface.cpp  interface.h
src/disk/exfat/: egl3_impl.c
src/graphics/fonts/: fonts.conf
src/installer/: CMakeLists.txt  packer_main.cpp
src/installer/backend/: Constants.cpp  Constants.h  Installer.cpp  Installer.h  Packer.cpp  Packer.h  RegistryInfo.cpp  RegistryInfo.h  Unpacker.cpp  Unpacker.h  VersionInfo.cpp  VersionInfo.h  consts.h  httplib.h  installer.cpp  installer.h  registry.h  streams.h  use_http.h  use_lz4.h
src/installer/gui/: framework.h  installerApp.cpp  installerApp.rc  installerAppDlg.cpp  installerAppDlg.h  resource.h
src/installer/installer/: CMakeLists.txt  NOTICE.txt  app.manifest  framework.h  installerApp.cpp  installerApp.h  installerApp.rc  installerAppDlg.cpp  installerAppDlg.h
src/installer/packer/: CMakeLists.txt  main.cpp
src/launcher/: main.cpp
src/minipacker/: InUse.h  InUseModules.cpp  InUseMulti.cpp-bad  InUseSingle.cpp-bad  ntdll.def  ntdll.exp  ntdll.lib
src/ministaller/: ArchiveStream.cpp  ArchiveStream.h  ArchiveStreamWeb.cpp  CMakeLists.txt  Instance.cpp  Instance.h  Language.cpp  Language.h  Main.cpp  Page.cpp  Page.h  PageDirectory.cpp  PageInstall.cpp  PageLicense.cpp  Window.cpp  Window.h  app.manifest  dialog.rc  resource.h  version.rc
src/ministaller/backend/: Backend.h  Installer.cpp  Installer.h  Internal.cpp  Internal.h  Packer.cpp  Packer.h  Registry.cpp  Registry.h
src/ministaller/packer/: CMakeLists.txt  Main.cpp
src/modules/: AsyncFF.cpp  AsyncFF.h  Authorization.cpp  Authorization.h  BaseModule.h  Friends.cpp  Friends.h  FriendsList.cpp  FriendsList.h  FriendsOptions.cpp  FriendsOptions.h  Game.cpp  Game.h  ImageCache.cpp  ImageCache.h  KairosMenu.cpp  KairosMenu.h  ModuleList.cpp  ModuleList.h  Modules.h  SidebarNotebook.h  StatsGraph.cpp  StatsGraph.h  StatusPage.cpp  StatusPage.h  SysTray.cpp  SysTray.h  Taskbar.cpp  Taskbar.h  UpdateCheck.cpp  UpdateCheck.h  WhatsNew.cpp  WhatsNew.h
src/modules/Friends/: Chat.cpp  Chat.h  Friends.cpp  Friends.h  FriendsChat.cpp  FriendsChat.h  FriendsList.cpp  FriendsList.h  FriendsOptions.cpp  FriendsOptions.h  KairosMenu.cpp  KairosMenu.h  List.cpp  List.h  Options.cpp  Options.h
src/modules/Game/: Download.cpp  Download.h  Game.cpp  Game.h  GameInfo.cpp  GameInfo.h  Options.cpp  Options.h  Play.cpp  Play.h  Service.cpp  Service.h  UpdateCheck.cpp  UpdateCheck.h  UpdateChecker.cpp  UpdateChecker.h  Updater.cpp  Updater.h
src/modules/Login/: Auth.cpp  Auth.h  Chooser.cpp  Chooser.h  Header.cpp  Header.h  Stack.cpp  Stack.h
src/ntfs/: attrib.c  attrib.h  attrlist.c  attrlist.h  bitmap.c  bitmap.h  boot.c  bootsect.c  bootsect.h  cache.c  cache.h  collate.c  compat.h  debug.h  device.c  device.h  device_io.h  dir.c  dir.h  egl3interface.h  endians.h  ffs.c  ffs.h  index.c  index.h  inode.c  inode.h  layout.h  lcnalloc.c  lcnalloc.h  logfile.c  logfile.h  logging.c  logging.h  mft.c  mft.h  misc.c  misc.h  mkntfs.c  mst.c  (+22 more)
src/srv/: CMakeLists.txt  Config.cpp  Config.h  Consts.cpp  Consts.h  Control.cpp  Control.h  DriveCounter.cpp  DriveCounter.h  IntervalTree.h  MountedArchive.cpp  MountedArchive.h  MountedDisk.cpp  MountedDisk.h  Service.cpp  Service.h  ServiceConfig.cpp  ServiceConfig.h  ServiceControl.cpp  ServiceControl.h  main.cpp  main.rc  srv_main.cpp
src/srv/pipe/: Client.cpp  Client.h  Protocol.h  Server.cpp  Server.h
src/srv/winspd/: winspd-x64.lib
src/srv/xorfilter/: fastfilter.h  xorfilter.h
src/storage/: CRunlistStream.h  install.cpp  install.h
src/storage/game/: Archive.cpp  Archive.h  ArchiveList.h  ArchiveListIterator.h  ArchiveListIteratorReadonly.h  ArchiveReadonly.cpp  ArchiveReadonly.h  ArchiveRef.h  ArchiveVersion.h  CRunlistStream.h  ChunkInfo.h  ChunkPart.h  File.h  GameId.h  Header.h  InstallArchive.cpp  InstallArchive.h  InstallChunkInfo.h  InstallChunkPart.h  InstallFile.h  InstallGameId.h  InstallHeader.h  InstallManifestData.h  InstallRunIndex.h  InstallRunlist.h  (+18 more)
src/utils/: Assert.h  AsyncMessageBox.cpp  AsyncMessageBox.h  Base64.cpp  Base64.h  Callback.h  Compression.cpp  Compression.h  Config.cpp  Config.h  DataDispatcher.h  EmitRAII.h  Encrypt.cpp  Encrypt.h  FontSetup.cpp  FontSetup.h  Format.h  GladeBuilder.h  Guid.h  HashCombine.h  Humanize.cpp  Humanize.h  IniFile.cpp  IniFile.h  Interop.cpp  Interop.h  JsonWrapperStream.h  KnownFolders.cpp  KnownFolders.h  Log.cpp  Log.h  OpenBrowser.cpp  OpenBrowser.h  Platform.cpp  Platform.h  Quote.cpp  Quote.h  RandGuid.cpp  RandGuid.h  Random.cpp  (+35 more)
src/web/: BaseClient.cpp  BaseClient.h  ClientSecrets.h  ErrorCode.h  ErrorData.h  Hosts.h  Http.cpp  Http.h  JsonParsing.cpp  JsonParsing.h  Response.h  RunningFunctionGuard.cpp  RunningFunctionGuard.h  RunningFunctionLock.h  Websocket.cpp  Websocket.h  base_client.cpp  base_client.h  http.h
src/widgets/: AccountList.cpp  AccountList.h  AspectScalingImage.h  AsyncImage.cpp  AsyncImage.h  AsyncImageKeyed.h  CellRendererAvatarStatus.h  CellRendererCenterText.h  CellRendererKairosAvatar.cpp  CellRendererKairosAvatar.h  CellRendererPixbufScalable.cpp  CellRendererPixbufScalable.h  CellRendererSplit.h  ChatBubble.cpp  ChatBubble.h  CurrentUserItem.cpp  CurrentUserItem.h  FriendItem.cpp  FriendItem.h  FriendItemMenu.cpp  FriendItemMenu.h  FriendList.cpp  FriendList.h  Graph.h  InstallLocationDialog.cpp  InstallLocationDialog.h  KairosAvatar.cpp  KairosAvatar.h  ScalingImage.h  SdTree.cpp  SdTree.h  StateGrid.h  UpdateDisplay.cpp  UpdateDisplay.h  WhatsNewItem.cpp  WhatsNewItem.h
(+375 files in other folders)
